samples/_failures_safe/1760959417_f363b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49c4c49f.c: In function ‘main’:
./samples/SAFE/__tmp_49c4c49f.c:171:12: error: missing terminating " character
  171 |     printf("Decompressed
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_49c4c49f.c:171:5: error: expected expression at end of input
  171 |     printf("Decompressed
      |     ^~~~~~
./samples/SAFE/__tmp_49c4c49f.c:171:5: error: expected declaration or statement at end of input
